--- a/index.html
+++ b/index.html
@@ -2,11 +2,264 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
+    <title>Интернет-магазин «Девайс»</title>
   </head>
   <body>
+    <header class="page-header">
+      <a  class="header-logo">
+        <img src="#" alt="Логотип сайта">
+      </a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <div class="header-top">
+        <form action="get" class="search-form">
+          <label for="header-search" class="visually-hidden"></label>
+          <input type="text" name="search" id="header-search" placeholder="Поиск по сайту">
+          <button type="submit"></button>
+        </form>
+        <div class="header-inner-wrapper">
+          <ul class="sign-in">
+            <li><a href="#">Войти</a></li>
+          </ul>
+          <a href="#">Сравнить</a>
+          <a href="#">Корзина</a>
+        </div>
+      </div>
 
+      <nav class="main-navigation">
+        <ul>
+          <li class="navigation-item">
+            <a href="#"><span>Каталог товаров</span></a>
+            <ul class="catalogue-list visually-hidden">
+              <li><a href="#">Виртуальная реальность</a></li>
+              <li><a href="#">Фитнес-браслеты</a></li>
+              <li><a href="#">Квадрокоптер</a></li>
+              <li><a href="#">Моноподы для селфи</a></li>
+              <li><a href="#">Умные часы</a></li>
+              <li><a href="#">Экшн-камеры</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1 class="visually-hidden">Интернет-магазин «Device»</h1>
+
+      <section class="showcase">
+
+        <!--Slider -->
+        <div class="slide-1">
+          <div class="slider-wrapper">
+            <img src="#" alt="" class="slider-img">
+          </div>
+
+          <div class="slider-wrapper">
+            <h2>Избранные товары</h2> <!--Переименовать-->
+            <span>01</span>
+            <h3 class="visually-hidden">Селфи-палка</h3>
+            <p>Делай селфи, как Бен Стиллер!</p>
+            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+            <a href="#">Подробнее</a>
+            <table>
+              <tr>
+                <th>Длина палки</th>
+                <th>Вес палки</th>
+                <th>Материал</th>
+              </tr>
+              <tr>
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class="slide-2 visually-hidden">
+          <div class="slider-wrapper"><img src="#" alt="" class="slider-img"></div>
+          <div class="slider-wrapper">
+            <span>02</span>
+            <h3>Фитнес-браслет</h3>
+            <p>Худеем правильно!</p>
+            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a href="#">Подробнее</a>
+            <table>
+              <tr>
+                <th>Без подзарядки</th>
+              </tr>
+              <tr>
+                <td>48 часов</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class="slide-3 visually-hidden">
+          <div class="slider-wrapper"><img src="#" alt="" class="slider-img"></div>
+          <div class="slider-wrapper">
+            <span>03</span>
+            <h3>Квадрокоптер</h3>
+            <p>Порхает как бабочка, жалит как пчела!</p>
+            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a href="#">Подробнее</a>
+            <table>
+              <tr>
+                <th>Дальность полета</th>
+                <th>Радиус поражения</th>
+              </tr>
+              <tr>
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <ul class="slider-controls">
+          <li>Первый слайд</li>
+          <li>Второй слайд</li>
+          <li>Третий слайд</li>
+        </ul>
+      </section>
+
+    <!--Категории товаров -->
+      <section class="product-categories">
+        <h2>Категории товаров</h2>
+        <ul>
+          <li>
+            <img src="#" alt="">
+            <a ><h3>Виртуальная реальность</h3></a>
+          </li>
+          <li>
+            <img src="#" alt="">
+            <a ><h3>Моноподы для селфи</h3></a>
+          </li>
+          <li>
+            <img src="#" alt="">
+            <a ><h3>Экшн-камеры</h3></a>
+          </li>
+          <li>
+            <img src="#" alt="">
+            <a ><h3>Фитнес-браслеты</h3></a>
+          </li>
+          <li>
+            <img src="#" alt="">
+            <a ><h3>Умные часы</h3></a>
+          </li>
+          <li>
+            <img src="#" alt="">
+            <a ><h3>Квадрокоптеры</h3></a>
+          </li>
+        </ul>
+      </section>
+
+    <!-- Услуги -->
+
+      <section class="services">
+        <h2 class="visually-hidden">Наши услуги</h2>
+
+        <ul class="services-list">
+          <li>Доставка</li>
+          <li>Гарантия</li>
+          <li>Кредит</li>
+        </ul>
+
+        <ul class="services-desc">
+          <li class="services-slide-1">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+          </li>
+          <li class="services-slide-2">
+            <h3>Гарантия</h3>
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+          </li>
+          <li class="services-slide-3">
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+          </li>
+        </ul>
+      </section>
+
+    <!-- Бренды -->
+
+      <section class="featured-brands">
+        <h2 class="visually-hidden">Наши любимые бренды</h2>
+
+        <ul>
+          <li class="brand dji">
+            <a href="#"><img src="#" alt="Логотип DJI"></a>
+          </li>
+          <li class="brand spgadgets">
+            <a href="#"><img src="#" alt="Логотип SP Gadgets"></a>
+          </li>
+          <li class="brand gopro">
+            <a href="#"><img src="#" alt="Логотип GoPro"></a>
+          </li>
+          <li class="brand vive">
+            <a href="#"><img src="#" alt="Логотип VIVE"></a>
+          </li>
+        </ul>
+      </section>
+
+    <!-- О нас и Контакты-->
+      <div>
+        <section class="about-us">
+          <h2>О нас</h2>
+          <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+          <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a >Подробнее о нас</a>
+        </section>
+
+        <section class="contacts">
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+          <img src="link" alt="Адрес: ул.Строителей, 15">
+          <button>Напишите нам</button>
+        </section>
+      </div>
+    </main>
+
+    <footer class="main-footer">
+      <div class="footer-wrapper">
+        <img src="link" alt="Логотип Device">
+        <div>
+          <ul class="sign-in">
+            <li><a href="#">Войти</a></li>
+          </ul>
+          <a href="#">Сравнить</a>
+          <a href="#">Корзина</a>
+        </div>
+      </div>
+
+      <div class="footer-wrapper">
+        <address>г.Москва, ул. Строителей, 15</address>
+
+        <ul>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+
+        <a href="tel:+74954959595">Тел: +7 (495) 495-95-95</a>
+      </div>
+
+      <div class="footer-wrapper">
+        <ul class="social-links">
+          <li class="FB"><a href="#">Facebook</a></li>
+          <li class="IG"><a href="#">Instagram</a></li>
+          <li class="TW"><a href="#">Twitter</a></li>
+        </ul>
+
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="логотип Html-Academy">HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
