--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a  class="header-logo">
+      <a href="#" class="header-logo">
         <img src="#" alt="Логотип сайта">
       </a>
 
@@ -39,9 +39,9 @@
               <li><a href="#">Экшн-камеры</a></li>
             </ul>
           </li>
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Контакты</li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -87,7 +87,7 @@
           <li class="TW"><a href="#">Twitter</a></li>
         </ul>
 
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="логотип Html-Academy">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="Логотип HTML Academy">HTML Academy</a>
       </div>
     </footer>
   </body>
