--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a  class="header-logo">
+      <a href="#" class="header-logo">
         <img src="#" alt="Логотип сайта">
       </a>
 
@@ -28,7 +28,7 @@
       <nav class="main-navigation">
         <ul>
           <li class="navigation-item">
-            <a href="#"><span>Каталог товаров</span></a>
+            <a href="catalog.html"><span>Каталог товаров</span></a>
             <ul class="catalogue-list visually-hidden">
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Фитнес-браслеты</a></li>
@@ -131,27 +131,27 @@
         <ul>
           <li>
             <img src="#" alt="">
-            <a ><h3>Виртуальная реальность</h3></a>
+            <a href="#"><h3>Виртуальная реальность</h3></a>
           </li>
           <li>
             <img src="#" alt="">
-            <a ><h3>Моноподы для селфи</h3></a>
+            <a href="#"><h3>Моноподы для селфи</h3></a>
           </li>
           <li>
             <img src="#" alt="">
-            <a ><h3>Экшн-камеры</h3></a>
+            <a href="#"><h3>Экшн-камеры</h3></a>
           </li>
           <li>
             <img src="#" alt="">
-            <a ><h3>Фитнес-браслеты</h3></a>
+            <a href="#"><h3>Фитнес-браслеты</h3></a>
           </li>
           <li>
             <img src="#" alt="">
-            <a ><h3>Умные часы</h3></a>
+            <a href="#"><h3>Умные часы</h3></a>
           </li>
           <li>
             <img src="#" alt="">
-            <a ><h3>Квадрокоптеры</h3></a>
+            <a href="#"><h3>Квадрокоптеры</h3></a>
           </li>
         </ul>
       </section>
@@ -215,7 +215,7 @@
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <a >Подробнее о нас</a>
+          <a href="#">Подробнее о нас</a>
         </section>
 
         <section class="contacts">
@@ -258,7 +258,7 @@
           <li class="TW"><a href="#">Twitter</a></li>
         </ul>
 
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="логотип Html-Academy">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="Логотип HTML Academy">HTML Academy</a>
       </div>
     </footer>
   </body>
