Разметка Главной и Каталога: правки

--- a/catalogue.html
+++ b/catalogue.html
@@ -29,7 +29,7 @@
       <nav class="main-navigation">
         <ul>
           <li class="navigation-item">
-            <a href="#"><span>Каталог товаров</span></a>
+            <a href="catalogue.html">Каталог товаров</a>
             <ul class="catalogue-list visually-hidden">
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Фитнес-браслеты</a></li>
@@ -50,9 +50,86 @@
       <h1>Моноподы для селфи</h1>
       <ul class="catalogue-nav">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог товаров</a></li>
+        <li><a href="catalogue.html">Каталог товаров</a></li>
         <li><a href="#">Моноподы для селфи</a></li>
       </ul>
+
+      <section class="filters">
+        <h2>Фильтры</h2>
+        <form action="#" method="get">
+          <!-- Здесь будет разметка формы -->
+        </form>
+      </section>
+
+      <section class="catalogue">
+        <h2 class="visually-hidden">Товары категории</h2>
+
+        <div class="sorting">
+          <p>Сортировка:</p>
+          <span>По цене</span>
+          <span>По типу</span>
+          <span>По популярности</span>
+
+          <ul class="sorting-direction">
+            <li>По возрастанию</li>
+            <li>По убыванию</li>
+          </ul>
+        </div>
+
+        <ul class="catalogue-list">
+          <li class="catalogue-item">
+            <img src="#" alt="Изображение товара">
+            <h3>Любительская селфи-палка</h3>
+            <span>500 руб.</span>
+            <div class="catalogue-item-hidden">
+              <a href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </div>
+          </li>
+
+          <li class="catalogue-item">
+            <img src="#" alt="Изображение товара">
+            <h3>Профессиональная селфи-палка</h3>
+            <span>1 500 руб.</span>
+            <div class="catalogue-hidden">
+              <a href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </div>
+          </li>
+
+          <li class="catalogue-item">
+            <img src="#" alt="Изображение товара">
+            <h3>Непотопляемая селфи-палка</h3>
+            <span>2 500 руб.</span>
+            <div class="catalogue-hidden">
+              <a href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </div>
+          </li>
+
+          <li class="catalogue-item">
+            <img src="#" alt="Изображение товара">
+            <h3>Селфи-палка "Следуй за мной"</h3>
+            <span>4 900 руб.</span>
+            <div class="catalog-hidden">
+              <a href="#">В корзину</a>
+              <a href="#">Добавить к сравнению</a>
+            </div>
+          </li>
+        </ul>
+
+        <div class="catalogue-nav">
+          <a href="#">Назад</a>
+
+          <ul class="catalogue-pages">
+            <li class="page-number"><a href="#"></a>1</li>
+            <li class="page-number"><a href="#"></a>2</li>
+            <li class="page-number"><a href="#"></a>3</li>
+          </ul>
+
+          <a href="#">Вперед</a>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -91,3 +168,4 @@
       </div>
     </footer>
   </body>
+</html>
