--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </a>
 
       <div class="header-top">
-        <form action="get" class="search-form">
+        <form action="#" method="get" class="search-form">
           <label for="header-search" class="visually-hidden"></label>
           <input type="text" name="search" id="header-search" placeholder="Поиск по сайту">
           <button type="submit"></button>
@@ -28,7 +28,7 @@
       <nav class="main-navigation">
         <ul>
           <li class="navigation-item">
-            <a href="catalog.html"><span>Каталог товаров</span></a>
+            <a href="catalogue.html">Каталог товаров</span></a>
             <ul class="catalogue-list visually-hidden">
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Фитнес-браслеты</a></li>
@@ -49,15 +49,13 @@
       <h1 class="visually-hidden">Интернет-магазин «Device»</h1>
 
       <section class="showcase">
-
+        <h2>Избранные товары</h2> <!--Переименовать-->
         <!--Slider -->
         <div class="slide-1">
           <div class="slider-wrapper">
-            <img src="#" alt="" class="slider-img">
+            <img src="#" alt="Самая длинная палка для селфи" class="slider-img">
           </div>
-
           <div class="slider-wrapper">
-            <h2>Избранные товары</h2> <!--Переименовать-->
             <span>01</span>
             <h3 class="visually-hidden">Селфи-палка</h3>
             <p>Делай селфи, как Бен Стиллер!</p>
@@ -79,7 +77,9 @@
         </div>
 
         <div class="slide-2 visually-hidden">
-          <div class="slider-wrapper"><img src="#" alt="" class="slider-img"></div>
+          <div class="slider-wrapper">
+            <img src="#" alt="Мотивирующий фитнес-браслет" class="slider-img">
+          </div>
           <div class="slider-wrapper">
             <span>02</span>
             <h3>Фитнес-браслет</h3>
@@ -98,7 +98,9 @@
         </div>
 
         <div class="slide-3 visually-hidden">
-          <div class="slider-wrapper"><img src="#" alt="" class="slider-img"></div>
+          <div class="slider-wrapper">
+            <img src="#" alt="Квадрокоптер с мощным лазером" class="slider-img">
+          </div>
           <div class="slider-wrapper">
             <span>03</span>
             <h3>Квадрокоптер</h3>
@@ -130,27 +132,21 @@
         <h2>Категории товаров</h2>
         <ul>
           <li>
-            <img src="#" alt="">
             <a href="#"><h3>Виртуальная реальность</h3></a>
           </li>
           <li>
-            <img src="#" alt="">
             <a href="#"><h3>Моноподы для селфи</h3></a>
           </li>
           <li>
-            <img src="#" alt="">
             <a href="#"><h3>Экшн-камеры</h3></a>
           </li>
           <li>
-            <img src="#" alt="">
             <a href="#"><h3>Фитнес-браслеты</h3></a>
           </li>
           <li>
-            <img src="#" alt="">
             <a href="#"><h3>Умные часы</h3></a>
           </li>
           <li>
-            <img src="#" alt="">
             <a href="#"><h3>Квадрокоптеры</h3></a>
           </li>
         </ul>
