Верстка Главной страницы и Каталога: правки

--- a/catalogue.html
+++ b/catalogue.html
@@ -12,9 +12,9 @@
 
       <div class="header-top">
         <form action="get" class="search-form">
-          <label for="header-search" class="visually-hidden"></label>
+          <label for="header-search" class="visually-hidden">Поиск по сайту</label>
           <input type="text" name="search" id="header-search" placeholder="Поиск по сайту">
-          <button type="submit"></button>
+          <button type="submit">Найти</button>
         </form>
         <div class="header-inner-wrapper">
           <ul class="sign-in">
@@ -66,20 +66,20 @@
 
         <div class="sorting">
           <p>Сортировка:</p>
-          <span>По цене</span>
-          <span>По типу</span>
-          <span>По популярности</span>
+          <a href="#">По цене</a>
+          <a href="#">По типу</a>
+          <a href="#">По популярности</a>
 
           <ul class="sorting-direction">
-            <li>По возрастанию</li>
-            <li>По убыванию</li>
+            <li><a href="#">По возрастанию</a></li>
+            <li><a href="#">По убыванию</a></li>
           </ul>
         </div>
 
         <ul class="catalogue-list">
           <li class="catalogue-item">
             <img src="#" alt="Изображение товара">
-            <h3>Любительская селфи-палка</h3>
+            <h3><a href="#">Любительская селфи-палка</a></h3>
             <span>500 руб.</span>
             <div class="catalogue-item-hidden">
               <a href="#">В корзину</a>
@@ -89,7 +89,7 @@
 
           <li class="catalogue-item">
             <img src="#" alt="Изображение товара">
-            <h3>Профессиональная селфи-палка</h3>
+            <h3><a href="#">Профессиональная селфи-палка</a></h3>
             <span>1 500 руб.</span>
             <div class="catalogue-hidden">
               <a href="#">В корзину</a>
@@ -99,7 +99,7 @@
 
           <li class="catalogue-item">
             <img src="#" alt="Изображение товара">
-            <h3>Непотопляемая селфи-палка</h3>
+            <h3><a href="#">Непотопляемая селфи-палка</a></h3>
             <span>2 500 руб.</span>
             <div class="catalogue-hidden">
               <a href="#">В корзину</a>
@@ -109,7 +109,7 @@
 
           <li class="catalogue-item">
             <img src="#" alt="Изображение товара">
-            <h3>Селфи-палка "Следуй за мной"</h3>
+            <h3><a href="#">Селфи-палка "Следуй за мной"</a></h3>
             <span>4 900 руб.</span>
             <div class="catalog-hidden">
               <a href="#">В корзину</a>
