--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a href="#" class="header-logo">
-        <img src="#" alt="Логотип сайта">
+        <img src="img/device-logo.svg" alt="Логотип интернет-магазина Device" width="163" height="35">
       </a>
 
       <div class="header-top">
@@ -53,7 +53,7 @@
         <!--Slider -->
         <div class="slide-1 slide--active">
           <div class="slider-wrapper">
-            <img src="#" alt="Самая длинная палка для селфи" class="slider-img">
+            <img src="img/slider-1.png" alt="Самая длинная палка для селфи" class="slider-img" width="384" height="486">
           </div>
           <div class="slider-wrapper">
             <span>01</span>
@@ -78,11 +78,11 @@
 
         <div class="slide-2 slide--inactive">
           <div class="slider-wrapper">
-            <img src="#" alt="Мотивирующий фитнес-браслет" class="slider-img">
+            <img src="img/slider-2.png" alt="Мотивирующий фитнес-браслет" class="slider-img" width="345" height="485">
           </div>
           <div class="slider-wrapper">
             <span>02</span>
-            <h3 class="visually-hidden">Фитнес-браслет</h3>
+            <h3 class="visually-hidden">Мотивирующий фитнес-браслет</h3>
             <p>Худеем правильно!</p>
             <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a href="#">Подробнее</a>
@@ -99,11 +99,11 @@
 
         <div class="slide-3 slide--inactive">
           <div class="slider-wrapper">
-            <img src="#" alt="Квадрокоптер с мощным лазером" class="slider-img">
+            <img src="img/slider-3.png" alt="Квадрокоптер с мощным лазером" class="slider-img" width="526" height="334">
           </div>
           <div class="slider-wrapper">
             <span>03</span>
-            <h3 class="visually-hidden">Квадрокоптер</h3>
+            <h3 class="visually-hidden">Квадрокоптер с мощным лазером</h3>
             <p>Порхает как бабочка, жалит как пчела!</p>
             <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a href="#">Подробнее</a>
@@ -186,16 +186,16 @@
 
         <ul>
           <li class="brand dji">
-            <a href="#"><img src="#" alt="Логотип DJI"></a>
+            <a href="#"><img src="img/djilogo.png" alt="Логотип DJI" width="260" height="100"></a>
           </li>
           <li class="brand spgadgets">
-            <a href="#"><img src="#" alt="Логотип SP Gadgets"></a>
+            <a href="#"><img src="img/spglogo.png" alt="Логотип SP Gadgets" width="260" height="100"></a>
           </li>
           <li class="brand gopro">
-            <a href="#"><img src="#" alt="Логотип GoPro"></a>
+            <a href="#"><img src="img/goprologo.png" alt="Логотип GoPro" width="260" height="100"></a>
           </li>
           <li class="brand vive">
-            <a href="#"><img src="#" alt="Логотип VIVE"></a>
+            <a href="#"><img src="img/vivelogo.png" alt="Логотип VIVE" width="260" height="100"></a>
           </li>
         </ul>
       </section>
@@ -217,7 +217,7 @@
         <section class="contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <img src="link" alt="Адрес: ул.Строителей, 15">
+          <img src="img/map.png" alt="Адрес: ул.Строителей, 15" width="560" height="222">
           <a href="#">Напишите нам</a>
         </section>
       </div>
@@ -225,7 +225,7 @@
 
     <footer class="main-footer">
       <div class="footer-wrapper">
-        <img src="link" alt="Логотип Device">
+        <img src="img/e-logo.svg" alt="Логотип магазина Device" width="163" height="35">
         <div>
           <ul class="sign-in">
             <li><a href="#">Войти</a></li>
@@ -254,7 +254,7 @@
           <li class="Tw"><a href="#">Twitter</a></li>
         </ul>
 
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="Логотип HTML Academy">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/academy-logo.svg" alt="Логотип HTML Academy" width="27" height="34">HTML Academy</a>
       </div>
     </footer>
   </body>
