--- a/catalogue.html
+++ b/catalogue.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a href="#" class="header-logo">
-        <img src="#" alt="Логотип сайта">
+        <img src="img/device-logo.svg" alt="Логотип интернет-магазина Device" width="163" height="35">
       </a>
 
       <div class="header-top">
@@ -78,7 +78,7 @@
 
         <ul class="catalogue-list">
           <li class="catalogue-item">
-            <img src="#" alt="Изображение товара">
+            <img src="img/item1.jpg" alt="Изображение товара" width="360" height="380">
             <h3><a href="#">Любительская селфи-палка</a></h3>
             <span>500 руб.</span>
             <div class="catalogue-item-hidden">
@@ -88,7 +88,7 @@
           </li>
 
           <li class="catalogue-item">
-            <img src="#" alt="Изображение товара">
+            <img src="img/item2.jpg" alt="Изображение товара" width="360" height="380">
             <h3><a href="#">Профессиональная селфи-палка</a></h3>
             <span>1 500 руб.</span>
             <div class="catalogue-hidden">
@@ -98,7 +98,7 @@
           </li>
 
           <li class="catalogue-item">
-            <img src="#" alt="Изображение товара">
+            <img src="img/item3.jpg" alt="Изображение товара" width="360" height="380">
             <h3><a href="#">Непотопляемая селфи-палка</a></h3>
             <span>2 500 руб.</span>
             <div class="catalogue-hidden">
@@ -108,7 +108,7 @@
           </li>
 
           <li class="catalogue-item">
-            <img src="#" alt="Изображение товара">
+            <img src="img/item4.jpg" alt="Изображение товара" width="360" height="380">
             <h3><a href="#">Селфи-палка "Следуй за мной"</a></h3>
             <span>4 900 руб.</span>
             <div class="catalog-hidden">
@@ -134,7 +134,7 @@
 
     <footer>
       <div class="footer-wrapper">
-        <img src="link" alt="Логотип Device">
+        <img src="img/e-logo.svg" alt="Логотип магазина Device" width="163" height="35">
         <div>
           <ul class="sign-in">
             <li><a href="#">Валентин Петухов</a></li>
@@ -164,7 +164,7 @@
           <li class="TW"><a href="#">Twitter</a></li>
         </ul>
 
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="link" alt="Логотип HTML Academy">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/academy-logo.svg" alt="Логотип HTML Academy" width="27" height="34">HTML Academy</a>
       </div>
     </footer>
   </body>
