Сетки: издание дополненное и переработанное-2

--- a/catalogue.html
+++ b/catalogue.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="catalogue-header page-header page-wrapper">
-      <a href="#">
+      <a href="index.html">
         <img src="img/device-logo.svg" class="header-logo" alt="Логотип интернет-магазина Device" width="163" height="35">
       </a>
 
